dsa/topic-wise/02: Fundamentals of Programming/01. Conditionals/examples/predictTheOutput01.cpp
#include <iostream>
using namespace std;
void main()
{
    int number = 0;
    if (number > 0)
        cout << "Number is positive.";
    else
        (number = > 0) cout << "Number is not negative."; // error
}